force-app/main/default/objects/ZB2B_PRICE2__x/ZB2B_PRICE2__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZB2B_PRICE2Set</externalName>
    <label>ZB2B_PRICE2</label>
    <pluralLabel>ZB2B_PRICE2Set</pluralLabel>
</CustomObject>