force-app/main/default/objects/ZB2B_PRICE2__x/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <description>Cantidad</description>
    <externalDeveloperName>Cantidad</externalDeveloperName>
    <label>Cantidad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>