force-app/main/default/objects/ZB2B_PRICE2__x/fields/Fmodifica__c.field-meta.xml
<CustomField>
    <fullName>Fmodifica__c</fullName>
    <description>Fmodifica</description>
    <externalDeveloperName>Fmodifica</externalDeveloperName>
    <label>Fmodifica</label>
    <type>DateTime</type>
</CustomField>