force-app/main/default/objects/ZB2B_PRICE2__x/fields/Prneto__c.field-meta.xml
<CustomField>
    <fullName>Prneto__c</fullName>
    <description>Prneto</description>
    <externalDeveloperName>Prneto</externalDeveloperName>
    <label>Prneto</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>